# hypebot

./: Dockerfile  README.md  deploy.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: main.yml  prbuild.yml
config/: config.example.yaml  config.yaml  config_debug_example.yaml  example_enhanced_config.yaml
docs/: boosting-improvements.md  environment-variables.md
hype/: config.py  hype.py
tests/: test_age_decay.py  test_boosting.py  test_environment_config.py  test_fetch_boost_limits.py  test_hashtag_diversity.py  test_hashtag_scoring.py  test_integration.py  test_language_detection.py  test_local_timeline.py  test_mastodon_api_error_handling.py  test_min_replies.py  test_negative_hashtag_weights.py  test_public_cap.py  test_quality_threshold.py  test_related_hashtags.py  test_score_status.py  test_seen_status.py  test_should_skip_status.py  test_spam_detection.py  test_unfederated_posts.py
