[project]
name = "hype"
version = "0.2.0"
description = "Mastodon bot that transfers trends from other instances"
authors = [
    {name = "Valentin Rieß", email = "contact@example.com"},
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "Mastodon.py",
    "schedule",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = true
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore", 
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"
