# Build system configuration (not needed for this project but good practice)
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Semantic Release Configuration
[tool.semantic_release]
version_toml = []  # We're not managing version in this file
branch = "main"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = true
build_command = ""
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore", 
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

# Test configuration (for pytest)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
